--- a/STOREFRONT/VirtoCommerce.Storefront/Web.config
+++ b/STOREFRONT/VirtoCommerce.Storefront/Web.config
@@ -3,7 +3,7 @@
     <configSections>
         <section name="cacheManager" type="CacheManager.Core.Configuration.CacheManagerSection, CacheManager.Core" />
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
-    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
+    </configSections>
 
     <connectionStrings>
         <add name="VirtoCommerceBaseUrl" connectionString="http://localhost/admin" />
@@ -85,30 +85,23 @@
                 </outputCacheProfiles>
             </outputCacheSettings>
         </caching>
-    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
-        </httpModules><httpHandlers>
-            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers></system.web>
+    </system.web>
     <system.webServer>
-        <validation validateIntegratedModeConfiguration="false" />
+        
         <modules runAllManagedModulesForAllRequests="true">
             <!--  Web API Put Request generates an Http 405 Method Not Allowed error -->
             <remove name="WebDAVModule" />
             <remove name="FormsAuthentication" />
             <remove name="UrlRoutingModule-4.0" />
             <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" />
-        <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
+        </modules>
 
         <security>
             <requestFiltering allowDoubleEscaping="true">
             </requestFiltering>
         </security>
     
-    <handlers>
-            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
-        </handlers></system.webServer>
+    </system.webServer>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
@@ -161,9 +154,4 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
-<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-      <!-- 
-          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
-          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      -->
-    </glimpse></configuration>
+</configuration>
